--- a/app/src/main/res/layout/activity_siguiente.xml
+++ b/app/src/main/res/layout/activity_siguiente.xml
@@ -10,10 +10,16 @@
         android:id="@+id/txt1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Estamos en el siguiente Activity"
+        android:text="Lista de Actividades"
+        android:textColor="@color/colorAccent"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.429"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"></TextView>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.103"></TextView>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
